<resources>
    <string name="app_name">쿠링하우스</string>

    <!--  Common  -->
    <string name="dialog_confirm">확인</string>
    <string name="kuring_house_title">🏠 쿠링하우스</string>

    <!--  OnBoarding  -->
    <string name="on_boarding_welcome">🎉 환영합니다!</string>
    <string name="on_boarding_introduction">쿠링하우스는 쿠링팀의 회의 및 즐거운 팀 활동을 위한 앱입니다. 정기 회의 뿐만 아니라 급하게 회의를 해야하는 경우 쿠링하우스에서 빠르게 회의 요청을 하세요. 팀원 전체에게, 혹은 특정 팀원에게만 회의 요청을 하실 수 있습니다. 하지만! 회의만 참여하지 마시고 오늘은 한 번 멤버들과 재밌게 소통해보세요! 너무 재밌어서 시간 가는 줄도 모를 걸요? 때로는 진솔한 얘기도 나눠보세요. \n\n\n 쿠링하우스는 오직 쿠링팀에서 초대받은 모든 사람들이 이용할 수 있습니다. 만약 쿠링팀의 멤버인데 앱 사용이 활성화되지 않은 경우 관리자에게 요청해주세요. 빠르게 초대코드를 전송해 드리겠습니다.</string>
    <string name="on_boarding_enter_invitation">초대코드 입력하기</string>
    <string name="get_invitation_code">초대코드를 못 받으셨나요? 코드 요청하기 →</string>

    <!--  Login  -->
    <string name="login_authorize">인증하기</string>
    <string name="login_email">이메일을 입력해주세요.</string>
    <string name="login_invitation_code">초대 코드를 입력해주세요.</string>

    <!--  Room  -->
    <string name="create_room_start">새 방 시작하기</string>
    <string name="create_room_name">방 제목을 입력해주세요</string>
    <string name="create_room">방 만들기</string>
    <string name="room_title_too_short">방 제목은 최소 2글자 이상 입력해주세요</string>
    <string name="create_room_fail">방을 만드는데 실패했습니다.</string>
    <string name="room_description">현재 음소거 상태입니다. \n대화에 참여하시려면 마이크 버튼을 눌러주세요</string>
    <string name="exit_room_quietly">✌ 조용히 나가기</string>
    <string name="room_info_fail">방 정보를 가져오는데 실패했습니다.</string>
    <string name="room_info_fail_try_again">방 정보를 가져오는데 실패하였습니다. \n다시 시도해주세요</string>
    <string name="enter_room_fail">방 입장에 실패했습니다.</string>
    <string name="no_room_description">쿠링하우스에 현재 생성된 방이 없습니다. \n새로운 방을 만들어 팀원들과 이야기해보세요!</string>
    <string name="no_permission_description">권한이 거부되었습니다. 음성 채팅을 하려면 권한을 허용해주세요.</string>
    <string name="leave_room_fail">방에서 퇴장하는데 문제가 발생하였습니다.</string>
    <string name="ask_to_leave_room">방에서 나가시겠습니까?</string>
    <string name="connection_fail">연결 상태가 끊겼습니다.</string>
</resources>