<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.yeonkyu.kuringhouse.presentation.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/notosanskr_bold"
            android:text="@string/on_boarding_welcome"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="no"
            android:background="@drawable/edittext_green"
            android:elevation="2dp"
            android:fontFamily="@font/sfpro_display_regular"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@={viewModel.email}"
            android:textColor="@color/kus_primary"
            android:textColorHint="@color/kus_secondary_gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

        <EditText
            android:id="@+id/login_invitation_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="no"
            android:background="@drawable/edittext_green"
            android:elevation="2dp"
            android:fontFamily="@font/sfpro_display_regular"
            android:hint="@string/login_invitation_code"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@={viewModel.accessToken}"
            android:textColor="@color/kus_primary"
            android:textColorHint="@color/kus_secondary_gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/login_email_et" />

        <Button
            android:id="@+id/login_authorize_bt"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/button_green_radius32"
            android:fontFamily="@font/sfpro_display_regular"
            android:gravity="center"
            android:text="@string/login_authorize"
            android:textColor="@color/kus_background"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/get_invitation_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/notosanskr_regular"
            android:gravity="center_horizontal"
            android:text="@string/get_invitation_code"
            android:textColor="@color/kus_green"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/login_authorize_bt" />

        <WebView
            android:id="@+id/webview"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>