<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="600dp"
    android:background="@drawable/bg_bottom_sheet_create_room">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/kus_secondary_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/notosanskr_bold"
        android:text="@string/create_room_start"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="no"
        android:background="@drawable/edittext_green"
        android:elevation="2dp"
        android:fontFamily="@font/sfpro_display_regular"
        android:hint="@string/create_room_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/kus_primary"
        android:textColorHint="@color/kus_secondary_gray"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_room_start"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_green_radius32"
        android:fontFamily="@font/sfpro_display_regular"
        android:gravity="center"
        android:text="@string/create_room"
        android:textColor="@color/kus_background"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>